2005-11-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.set_invalid): 
	Only connect to done here, that's the only place where we need to 
	use it. When done, set text and icon. Also disconnect the signal
	so it won't be called multiple times.

	* kiwi/ui/widgets/entry.py (Entry._update_current_object): Add custom
	validation, when using objects.
	
	* kiwi/ui/gadgets.py (FadeOut.start): Add additional state, so we know 
	if we're done when start() is called multiple times. Always emit done, 
	since we're depending on it in other places.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.don): Wait until 
	the completion is done to set the text.

	* kiwi/ui/gazpacholoader.py (EntryDataType.get_data_types): Add Object, 
	useful when using entry completion.

2005-11-07  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py (FadeOut.stop): Simplify, use delayed.stop, avoids
	extra state and makes it reliable. Add API documentation.

	* kiwi/decorators.py (delayed.stop): New function

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.set_blank)
	(WidgetMixinSupportValidation.set_invalid)
	(WidgetMixinSupportValidation.set_valid): Make public and add
	API documentation.

2005-11-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (compile_po_files): Handle the case when msgfmt
	is not found, print a warning and returning nothing, instead of
	failing later on.

2005-11-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (app): Add global app reference
	(Library.__init__): Add better error messages and insert
	$prefix/lib/pythonX.Y/site-packages into sys.path

2005-10-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py (IconEntry.update_background): Handle insensitive 
	widgets aswell, always use the current state instead of hard coding
	GTK_STATE_NORMAL.

2005-10-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/proxy.py: